@@ -30,6 +30,7 @@
 
 #include "my/my-utils.h"
 
+#include "api/ofa-dossier-store.h"
 #include "api/ofa-idbdossier-meta.h"
 #include "api/ofa-idbexercice-meta.h"
 #include "api/ofa-igetter.h"
@@ -53,7 +54,8 @@ typedef struct {
 
 	/* runtime
 	 */
-	ofaExerciceStore  *store;
+	ofaDossierStore   *store;
+	ofaIDBDossierMeta *meta;
 }
 	ofaExerciceTreeviewPrivate;
 
@@ -75,6 +77,7 @@ static void     on_selection_delete( ofaExerciceTreeview *self, GtkTreeSelection
 static void     get_and_send( ofaExerciceTreeview *self, GtkTreeSelection *selection, const gchar *signal );
 static gboolean get_selected_with_selection( ofaExerciceTreeview *self, GtkTreeSelection *selection, ofaIDBExerciceMeta **period );
 static void     set_selected_with_selection( ofaExerciceTreeview *self, GtkTreeSelection *selection, ofaIDBExerciceMeta *meta );
+static gboolean tvbin_v_filter( const ofaTVBin *bin, GtkTreeModel *tmodel, GtkTreeIter *iter );
 static gint     tvbin_v_sort( const ofaTVBin *bin, GtkTreeModel *tmodel, GtkTreeIter *a, GtkTreeIter *b, gint column_id );
 
 G_DEFINE_TYPE_EXTENDED( ofaExerciceTreeview, ofa_exercice_treeview, OFA_TYPE_TVBIN, 0,
@@ -137,6 +140,7 @@ ofa_exercice_treeview_init( ofaExerciceTreeview *self )
 	priv->dispose_has_run = FALSE;
 	priv->settings_prefix = g_strdup( G_OBJECT_TYPE_NAME( self ));
 	priv->store = NULL;
+	priv->meta = NULL;
 }
 
 static void
@@ -149,6 +153,7 @@ ofa_exercice_treeview_class_init( ofaExerciceTreeviewClass *klass )
 	G_OBJECT_CLASS( klass )->dispose = exercice_treeview_dispose;
 	G_OBJECT_CLASS( klass )->finalize = exercice_treeview_finalize;
 
+	OFA_TVBIN_CLASS( klass )->filter = tvbin_v_filter;
 	OFA_TVBIN_CLASS( klass )->sort = tvbin_v_sort;
 
 	/**
@@ -277,7 +282,7 @@ ofa_exercice_treeview_new( ofaIGetter *getter, const gchar *settings_prefix )
 
 	setup_columns( view );
 
-	priv->store = ofa_exercice_store_new( getter );
+	priv->store = ofa_dossier_store_new( getter );
 	ofa_tvbin_set_store( OFA_TVBIN( view ), GTK_TREE_MODEL( priv->store ));
 
 	return( view );
@@ -293,12 +298,12 @@ setup_columns( ofaExerciceTreeview *self )
 
 	g_debug( "%s: self=%p", thisfn, ( void * ) self );
 
-	ofa_tvbin_add_column_text   ( OFA_TVBIN( self ), EXERCICE_COL_LABEL,  _( "Label" ),      NULL );
-	ofa_tvbin_add_column_text_c ( OFA_TVBIN( self ), EXERCICE_COL_END,    _( "End" ),    _( "Exercice end" ));
-	ofa_tvbin_add_column_text_c ( OFA_TVBIN( self ), EXERCICE_COL_BEGIN,  _( "Begin" ),  _( "Exercice begin" ));
-	ofa_tvbin_add_column_text   ( OFA_TVBIN( self ), EXERCICE_COL_STATUS, _( "Status" ),     NULL );
+	ofa_tvbin_add_column_text   ( OFA_TVBIN( self ), DOSSIER_COL_EXELABEL, _( "Label" ),      NULL );
+	ofa_tvbin_add_column_text_c ( OFA_TVBIN( self ), DOSSIER_COL_END,      _( "End" ),    _( "Exercice end" ));
+	ofa_tvbin_add_column_text_c ( OFA_TVBIN( self ), DOSSIER_COL_BEGIN,    _( "Begin" ),  _( "Exercice begin" ));
+	ofa_tvbin_add_column_text   ( OFA_TVBIN( self ), DOSSIER_COL_STATUS,   _( "Status" ),     NULL );
 
-	ofa_itvcolumnable_set_default_column( OFA_ITVCOLUMNABLE( self ), EXERCICE_COL_LABEL );
+	ofa_itvcolumnable_set_default_column( OFA_ITVCOLUMNABLE( self ), DOSSIER_COL_EXELABEL );
 }
 
 /**
@@ -306,10 +311,8 @@ setup_columns( ofaExerciceTreeview *self )
  * @view: this #ofaExerciceTreeview instance.
  * @meta: [allow-none]: the #ofaIDBDossierMeta which describes the dossier.
  *
- * Create the store which automatically loads the available exercices
- * for this dossier.
- *
- * Select the first available exercice.
+ * Update the treeview to show the exercices attached to @meta.
+ * Select the first available exercice if any.
  */
 void
 ofa_exercice_treeview_set_dossier( ofaExerciceTreeview *view, ofaIDBDossierMeta *meta )
@@ -327,12 +330,14 @@ ofa_exercice_treeview_set_dossier( ofaExerciceTreeview *view, ofaIDBDossierMeta 
 
 	g_return_if_fail( !priv->dispose_has_run );
 
-	ofa_exercice_store_set_dossier( priv->store, meta );
+	priv->meta = meta;
+	ofa_tvbin_refilter( OFA_TVBIN( view ));
 
 	if( meta ){
 		periods = ofa_idbdossier_meta_get_periods( meta );
-		g_return_if_fail( g_list_length(( GList * ) periods ) >= 1 );
-		ofa_exercice_treeview_set_selected( view, OFA_IDBEXERCICE_META( periods->data ));
+		if( periods && g_list_length(( GList * ) periods ) >= 1 ){
+			ofa_exercice_treeview_set_selected( view, OFA_IDBEXERCICE_META( periods->data ));
+		}
 	}
 }
 
@@ -407,7 +412,9 @@ ofa_exercice_treeview_get_selected( ofaExerciceTreeview *view )
  * @selection: the current #GtkTreeSelection.
  * @period: [out][allow-none]:
  *
- * Return: the currently selected class, or %NULL.
+ * Returns: %TRUE if an exercice was selected (and @period is thus non
+ *  %NULL), %FALSE if there was no current selection, and @period is set
+ *  to %NULL.
  */
 static gboolean
 get_selected_with_selection( ofaExerciceTreeview *self, GtkTreeSelection *selection, ofaIDBExerciceMeta **period )
@@ -415,18 +422,18 @@ get_selected_with_selection( ofaExerciceTreeview *self, GtkTreeSelection *select
 	gboolean ok;
 	GtkTreeModel *tmodel;
 	GtkTreeIter iter;
-	ofaIDBExerciceMeta *row_period = NULL;
+	ofaIDBExerciceMeta *row_period;
 
 	ok = FALSE;
-	if( period ){
-		*period = NULL;
-	}
+	row_period = NULL;
 
 	if( gtk_tree_selection_get_selected( selection, &tmodel, &iter )){
 		ok = TRUE;
-		gtk_tree_model_get( tmodel, &iter, EXERCICE_COL_EXE_META, &row_period, -1 );
+		gtk_tree_model_get( tmodel, &iter, DOSSIER_COL_EXE_META, &row_period, -1 );
+		g_return_val_if_fail( row_period && OFA_IS_IDBEXERCICE_META( row_period ), FALSE );
 		g_object_unref( row_period );
 	}
+
 	if( period ){
 		*period = row_period;
 	}
@@ -475,7 +482,8 @@ set_selected_with_selection( ofaExerciceTreeview *self, GtkTreeSelection *select
 		tmodel = ofa_tvbin_get_tree_model( OFA_TVBIN( self ));
 		if( gtk_tree_model_get_iter_first( tmodel, &iter )){
 			while( TRUE ){
-				gtk_tree_model_get( tmodel, &iter, EXERCICE_COL_EXE_META, &row_period, -1 );
+				gtk_tree_model_get( tmodel, &iter, DOSSIER_COL_EXE_META, &row_period, -1 );
+				g_return_if_fail( row_period && OFA_IS_IDBEXERCICE_META( row_period ));
 				g_object_unref( row_period );
 				if( ofa_idbexercice_meta_compare( meta, row_period ) == 0 ){
 					gtk_tree_selection_select_iter( selection, &iter );
@@ -489,44 +497,78 @@ set_selected_with_selection( ofaExerciceTreeview *self, GtkTreeSelection *select
 	}
 }
 
+static gboolean
+tvbin_v_filter( const ofaTVBin *tvbin, GtkTreeModel *model, GtkTreeIter *iter )
+{
+	ofaExerciceTreeviewPrivate *priv;
+	ofaIDBDossierMeta *meta;
+
+	priv = ofa_exercice_treeview_get_instance_private( OFA_EXERCICE_TREEVIEW( tvbin ));
+
+	gtk_tree_model_get( model, iter, DOSSIER_COL_DOS_META, &meta, -1 );
+
+	if( !meta ){
+		return( FALSE );
+	}
+
+	g_object_unref( meta );
+
+	return( meta == priv->meta );
+}
+
 static gint
 tvbin_v_sort( const ofaTVBin *bin, GtkTreeModel *tmodel, GtkTreeIter *a, GtkTreeIter *b, gint column_id )
 {
 	static const gchar *thisfn = "ofa_exercice_treeview_v_sort";
 	ofaExerciceTreeviewPrivate *priv;
 	gint cmp;
-	gchar *labela, *enda, *begina, *stata;
-	gchar *labelb, *endb, *beginb, *statb;
+	gchar *dosa, *prova, *pera, *enda, *begina, *stata, *laba;
+	gchar *dosb, *provb, *perb, *endb, *beginb, *statb, *labb;
 
 	priv = ofa_exercice_treeview_get_instance_private( OFA_EXERCICE_TREEVIEW( bin ));
 
 	gtk_tree_model_get( tmodel, a,
-			EXERCICE_COL_LABEL,  &labela,
-			EXERCICE_COL_END,    &enda,
-			EXERCICE_COL_BEGIN,  &begina,
-			EXERCICE_COL_STATUS, &stata,
+			DOSSIER_COL_DOSNAME,  &dosa,
+			DOSSIER_COL_PROVNAME, &prova,
+			DOSSIER_COL_PERNAME,  &pera,
+			DOSSIER_COL_EXELABEL, &laba,
+			DOSSIER_COL_END,      &enda,
+			DOSSIER_COL_BEGIN,    &begina,
+			DOSSIER_COL_STATUS,   &stata,
 			-1 );
 
 	gtk_tree_model_get( tmodel, b,
-			EXERCICE_COL_LABEL,  &labelb,
-			EXERCICE_COL_END,    &endb,
-			EXERCICE_COL_BEGIN,  &beginb,
-			EXERCICE_COL_STATUS, &statb,
+			DOSSIER_COL_DOSNAME,  &dosb,
+			DOSSIER_COL_PROVNAME, &provb,
+			DOSSIER_COL_PERNAME,  &perb,
+			DOSSIER_COL_EXELABEL, &labb,
+			DOSSIER_COL_END,      &endb,
+			DOSSIER_COL_BEGIN,    &beginb,
+			DOSSIER_COL_STATUS,   &statb,
 			-1 );
 
 	cmp = 0;
 
 	switch( column_id ){
-		case EXERCICE_COL_LABEL:
-			cmp = my_collate( labela, labelb );
+		case DOSSIER_COL_DOSNAME:
+			cmp = my_collate( dosa, dosb );
 			break;
-		case EXERCICE_COL_END:
+		case DOSSIER_COL_PROVNAME:
+			cmp = my_collate( prova, provb );
+			break;
+		case DOSSIER_COL_PERNAME:
+			cmp = my_collate( pera, perb );
+			break;
+		case DOSSIER_COL_EXELABEL:
+			cmp = my_collate( laba, labb );
+			break;
+		case DOSSIER_COL_END:
 			cmp = my_date_compare_by_str( enda, endb, ofa_prefs_date_get_display_format( priv->getter ));
 			break;
-		case EXERCICE_COL_BEGIN:
+		case DOSSIER_COL_BEGIN:
 			cmp = my_date_compare_by_str( begina, beginb, ofa_prefs_date_get_display_format( priv->getter ));
 			break;
-		case EXERCICE_COL_STATUS:
+		case DOSSIER_COL_STATUS:
 			cmp = my_collate( stata, statb );
 			break;
 		default:
@@ -534,12 +576,18 @@ tvbin_v_sort( const ofaTVBin *bin, GtkTreeModel *tmodel, GtkTreeIter *a, GtkTree
 			break;
 	}
 
-	g_free( labela );
+	g_free( dosa );
+	g_free( prova );
+	g_free( pera );
+	g_free( laba );
 	g_free( enda );
 	g_free( begina );
 	g_free( stata );
 
-	g_free( labelb );
+	g_free( dosb );
+	g_free( provb );
+	g_free( perb );
+	g_free( labb );
 	g_free( endb );
 	g_free( beginb );
 	g_free( statb );
